--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "aws_client"
 version = "0.1.0"
 edition = "2021"
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -26,3 +27,10 @@ bytes = "0.4.12"
 http-body = "0.4.5"
 rand = "0.5.0"
 futures-util = { version = "0.3.21", features = ["alloc"] }
+
+[build-dependencies]
+winresource = "0.1.14"
+
+[package.metadata.winresource]
+ProductName = "Command Line AWS Client"
+LegalCopyright = "Copyright © 2022"
