--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ bytes = "0.4.12"
 http-body = "0.4.5"
 rand = "0.5.0"
 futures-util = { version = "0.3.21", features = ["alloc"] }
+simple-error = "0.2.3"
 
 [build-dependencies]
 winresource = "0.1.14"
